Recriado as migrations Categories e Specifications. Refatorado o módulo Specifications.
