# src/routes/specifications.routes.ts
@@ -1,10 +1,14 @@
 import { Router } from "express";
 
 import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListSpecificationsController";
 
 const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 specificationsRoutes.post("/", createSpecificationController.handle);
+
+const listSpecificationsController = new ListSpecificationsController();
+specificationsRoutes.get("/", listSpecificationsController.handle);
 
 export { specificationsRoutes };
